--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
 
     env:
       DATABASE_URL: postgresql://surplus:surplus@localhost:5432/surplus
+      SHADOW_DATABASE_URL: postgresql://surplus:surplus@localhost:5432/surplus_shadow
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
 
@@ -61,10 +62,18 @@ jobs:
         working-directory: apps/api
         run: pnpm exec prisma migrate deploy --schema prisma/schema.prisma
 
-      # P1 hardening: fail if schema.prisma != migrations (prevents future drift)
+      # Create shadow DB for prisma migrate diff
+      - name: Create shadow database
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
+          PGPASSWORD=surplus psql -h localhost -U surplus -d postgres -c "CREATE DATABASE surplus_shadow;" || true
+
       - name: Prisma schema vs migrations diff
         working-directory: apps/api
-        run: pnpm exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-migrations=./prisma/migrations --exit-code
+        env:
+          SHADOW_DATABASE_URL: ${{ env.SHADOW_DATABASE_URL }}
+        run: pnpm exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-migrations=./prisma/migrations --shadow-database-url="${SHADOW_DATABASE_URL}" --exit-code
 
       - name: Typecheck
         run: |
