--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   build-and-verify:
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres:15
@@ -28,7 +27,6 @@ jobs:
 
     env:
       DATABASE_URL: postgresql://surplus:surplus@localhost:5432/surplus
-      SHADOW_DATABASE_URL: postgresql://surplus:surplus@localhost:5432/surplus_shadow
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
 
@@ -62,18 +60,9 @@ jobs:
         working-directory: apps/api
         run: pnpm exec prisma migrate deploy --schema prisma/schema.prisma
 
-      # Create shadow DB for prisma migrate diff
-      - name: Create shadow database
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
-          PGPASSWORD=surplus psql -h localhost -U surplus -d postgres -c "CREATE DATABASE surplus_shadow;" || true
-
-      - name: Prisma schema vs migrations diff
+      - name: Prisma schema vs database diff
         working-directory: apps/api
-        env:
-          SHADOW_DATABASE_URL: ${{ env.SHADOW_DATABASE_URL }}
-        run: pnpm exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-migrations=./prisma/migrations --shadow-database-url="${SHADOW_DATABASE_URL}" --exit-code
+        run: pnpm exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-schema-datasource=./prisma/schema.prisma --exit-code
 
       - name: Typecheck
         run: |
