--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dev:web": "pnpm --filter @surplus/web dev",
     "lint:web": "pnpm --filter @surplus/web lint",
     "test:web": "pnpm --filter @surplus/web test",
+    "prisma:validate": "pnpm --filter @surplus/api prisma:validate",
+    "prisma:drift": "pnpm --filter @surplus/api prisma:drift",
     "postinstall": "pnpm --filter @surplus/api prisma:generate"
   },
   "devDependencies": {
