--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
 
-      # Keep this false until alignment migration makes drift clean.
+      # Enable Prisma drift check in CI.
       PRISMA_DRIFT_CHECK: "true"
 
     steps:
