Make tests deterministic and add typecheck script

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
     "test": "TS_NODE_PROJECT=./tsconfig.test.json node ./test/run-tests.js",
+    "test:integration": "RUN_DB_TESTS=true TS_NODE_PROJECT=./tsconfig.test.json node ./test/run-tests.js",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "prisma:migrate": "pnpm exec prisma migrate deploy --schema ./prisma/schema.prisma",
