Add readiness checks and deployment env docs

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,1 +1,17 @@
+# API server
+PORT=3001
+
+# Database
 DATABASE_URL=postgresql://surplus:surplus@localhost:5432/surplus
+
+# Auth & consent
+JWT_ACCESS_SECRET=local-dev-secret
+CONSENT_TOKEN_SECRET=consent-token-dev-secret
+CONSENT_PORTAL_BASE_URL=https://client.surplus.local/consent
+
+# Upload limits (bytes)
+MAX_UPLOAD_BYTES=5242880
+
+# Rate limiting
+TENANT_RATE_LIMIT=120
+TENANT_RATE_WINDOW_MS=60000
