--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:web": "pnpm --filter @surplus/web dev",
     "lint:web": "pnpm --filter @surplus/web lint",
     "test:web": "pnpm --filter @surplus/web test",
+    "deploy:prepare": "pnpm --filter @surplus/api prisma:generate",
     "prisma:validate": "pnpm --filter @surplus/api exec prisma validate --schema ./prisma/schema.prisma && pnpm --filter @surplus/api exec prisma generate --schema ./prisma/schema.prisma",
     "prisma:drift": "pnpm --filter @surplus/api exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-migrations=./prisma/migrations --shadow-database-url=$SHADOW_DATABASE_URL --exit-code",
     "postinstall": "pnpm --filter @surplus/api prisma:generate"
