--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint:web": "pnpm --filter @surplus/web lint",
     "test:web": "pnpm --filter @surplus/web test",
     "deploy:prepare": "pnpm --filter @surplus/api prisma:generate",
+    "seed:beta": "pnpm --filter @surplus/api exec ts-node --project tsconfig.json prisma/seed.beta.ts",
+    "smoke:prod": "pnpm --filter @surplus/api exec ts-node --project tsconfig.json scripts/smoke-prod.ts",
     "prisma:validate": "pnpm --filter @surplus/api exec prisma validate --schema ./prisma/schema.prisma && pnpm --filter @surplus/api exec prisma generate --schema ./prisma/schema.prisma",
     "prisma:drift": "pnpm --filter @surplus/api exec prisma migrate diff --from-schema-datamodel=./prisma/schema.prisma --to-migrations=./prisma/migrations --shadow-database-url=$SHADOW_DATABASE_URL --exit-code",
     "postinstall": "pnpm --filter @surplus/api prisma:generate"
