--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
 
       - name: Tests
         env:
-          SKIP_PRISMA_DB_SETUP: "true"
+          RUN_DB_TESTS: "true"
           RUN_API_INTEGRATION: "true"
         run: pnpm test
 
