Add CI DB checks and runbook docs

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,6 +3,7 @@ PORT=3001
 
 # Database
 DATABASE_URL=postgresql://surplus:surplus@localhost:5432/surplus
+SHADOW_DATABASE_URL=postgresql://surplus:surplus@localhost:5433/surplus_shadow
 
 # Auth & consent
 JWT_ACCESS_SECRET=local-dev-secret
