--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
       SHADOW_DATABASE_URL: postgresql://surplus:surplus@localhost:5433/surplus_shadow
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
+      RUN_DB_TESTS: "true"
 
       # Enable Prisma drift check in CI.
       PRISMA_DRIFT_CHECK: "true"
@@ -86,6 +87,7 @@ jobs:
         run: pnpm lint
 
       - name: Prisma migrate deploy
+        if: env.RUN_DB_TESTS == 'true'
         working-directory: apps/api
         run: pnpm exec prisma migrate deploy --schema prisma/schema.prisma
 
@@ -107,10 +109,34 @@ jobs:
           pnpm exec tsc -p apps/worker/tsconfig.json --noEmit
           pnpm exec tsc -p apps/web/tsconfig.json --noEmit
 
+      - name: Postgres readiness (pg_isready)
+        if: env.RUN_DB_TESTS == 'true'
+        shell: bash
+        run: |
+          echo "Checking Postgres readiness with pg_isready..."
+          for i in {1..30}; do
+            if docker run --rm --network host postgres:15 pg_isready -h localhost -p 5432 -U surplus -d surplus; then
+              echo "Postgres is ready."
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "Postgres did not become ready within 30 seconds." >&2
+          exit 1
+
+      - name: Guard DATABASE_URL for DB tests
+        shell: bash
+        run: |
+          if [[ "${RUN_DB_TESTS}" == "true" && -z "${DATABASE_URL}" ]]; then
+            echo "RUN_DB_TESTS=true requires DATABASE_URL to be set." >&2
+            exit 1
+          fi
+
       - name: Tests
         env:
           SKIP_PRISMA_DB_SETUP: "true"
           RUN_API_INTEGRATION: "true"
+          RUN_DB_TESTS: "true"
         run: pnpm test
 
       - name: Build
