--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,6 +3,8 @@ PORT=3001
 
 # Database
 DATABASE_URL=postgresql://surplus:surplus@localhost:5432/surplus
+SHADOW_DATABASE_URL=postgresql://surplus:surplus@localhost:5433/surplus_shadow
+RUN_DB_TESTS=true
 
 # Auth & consent
 JWT_ACCESS_SECRET=local-dev-secret
@@ -15,3 +17,6 @@ MAX_UPLOAD_BYTES=5242880
 # Rate limiting
 TENANT_RATE_LIMIT=120
 TENANT_RATE_WINDOW_MS=60000
+
+# Environment
+NODE_ENV=test
